--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "26.0.1",
     "prettier": "2.0.5",
     "react-test-renderer": "16.13.1",
+    "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "1.5.4",
     "stylelint-config-htmlacademy": "0.1.4",
     "webpack": "4.43.0",
